--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Styles Conference</title>
+    <!--
     <link rel="stylesheet" href="css/main.css">
+    -->
   </head>
   <body>
-    <h1>Styles Conference</h1>
-    <p>
-      Every year the brightest web designers and front-end developers descend on
-      Chicago to discuss the latest technologies. Join us this August.
-    </p>
+    <header>
+        <nav></nav>
+    </header>
+    <section></section>
+    <section>
+        <article></article>
+        <article></article>
+        <article></article>
+    </section>
+    <footer>
+        <nav></nav>
+    </footer>
   </body>
 </html>
