--- a/index.html
+++ b/index.html
@@ -5,22 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Styles Conference</title>
-    <!--
-    <link rel="stylesheet" href="css/main.css">
-    -->
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
   </head>
   <body>
     <header>
-        <nav></nav>
+      <h1>Styles Conference</h1>
+      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <nav></nav>
     </header>
-    <section></section>
     <section>
-        <article></article>
-        <article></article>
-        <article></article>
+      <h2>Dedicated to the Craft of Building Websites</h2>
+      <p>
+        Every year the brightest web designers and front-end developers descend
+        on Chicago to discuss the latest technologies. Join us this August!
+      </p>
+    </section>
+    <section>
+      <article>
+        <h5>Speakers</h5>
+        <h3>World-Class Speakers</h3>
+        <p>
+          Joining us from all around the world are over twenty fantastic
+          speakers, here to share their stories.
+        </p>
+      </article>
+      <article>
+        <h5>Schedule</h5>
+        <h3>Three Inspiring Days</h3>
+        <p>
+          Enjoy three inspiring and action-packed days of talks, gatherings, and
+          all-around good times.
+        </p>
+      </article>
+      <article>
+        <h5>Venue</h5>
+        <h3>The Chicago Theatre</h3>
+        <p>
+          Within the heart of downtown Chicago, The Chicago Theatre will provide
+          a beautiful conference venue.
+        </p>
+      </article>
     </section>
     <footer>
-        <nav></nav>
+      <small>&copy; Styles Conference</small>
+      <nav></nav>
     </footer>
   </body>
 </html>
