Added unordered lists in nav element in header and footer.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <header>
       <h1>Styles Conference</h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-      <nav></nav>
+      <nav>
+            <ul>
+                    <li>Home</li>
+                    <li>Speakers</li>
+                    <li>Schedule</li>
+                    <li>Venue</li>
+                    <li>Register</li>
+                  </ul>
+          
+      </nav>
     </header>
     <section>
       <h2>Dedicated to the Craft of Building Websites</h2>
