Added hyperlinks to navigation and articles.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
       <h1>Styles Conference</h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
       <nav>
-            <ul>
-                    <li>Home</li>
-                    <li>Speakers</li>
-                    <li>Schedule</li>
-                    <li>Venue</li>
-                    <li>Register</li>
-                  </ul>
-          
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="speakers.html">Speakers</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="venue.html">Venue</a></li>
+          <li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
     </header>
     <section>
@@ -28,27 +27,34 @@
         Every year the brightest web designers and front-end developers descend
         on Chicago to discuss the latest technologies. Join us this August!
       </p>
+      <a href="register.html">Register Now</a>
     </section>
     <section>
       <article>
-        <h5>Speakers</h5>
-        <h3>World-Class Speakers</h3>
+        <a href="speakers.html">
+          <h5>Speakers</h5>
+          <h3>World-Class Speakers</h3>
+        </a>
         <p>
           Joining us from all around the world are over twenty fantastic
           speakers, here to share their stories.
         </p>
       </article>
       <article>
-        <h5>Schedule</h5>
-        <h3>Three Inspiring Days</h3>
+        <a href="schedule.html">
+          <h5>Schedule</h5>
+          <h3>Three Inspiring Days</h3>
+        </a>
         <p>
           Enjoy three inspiring and action-packed days of talks, gatherings, and
           all-around good times.
         </p>
       </article>
       <article>
-        <h5>Venue</h5>
-        <h3>The Chicago Theatre</h3>
+        <a href="venue.html">
+          <h5>Venue</h5>
+          <h3>The Chicago Theatre</h3>
+        </a>
         <p>
           Within the heart of downtown Chicago, The Chicago Theatre will provide
           a beautiful conference venue.
@@ -57,7 +63,15 @@
     </section>
     <footer>
       <small>&copy; Styles Conference</small>
-      <nav></nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="speakers.html">Speakers</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="venue.html">Venue</a></li>
+          <li><a href="register.html">Register</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
