Created folders for images. Added images to folders. Added images to articles in index.html.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <article>
         <a href="speakers.html">
           <h5>Speakers</h5>
+          <img src="images/home/speakers.jpg" alt="Professional Speaker">
           <h3>World-Class Speakers</h3>
         </a>
         <p>
@@ -43,6 +44,7 @@
       <article>
         <a href="schedule.html">
           <h5>Schedule</h5>
+          <img src="images/home/schedule.jpg" alt="Conference Attendees">
           <h3>Three Inspiring Days</h3>
         </a>
         <p>
@@ -53,6 +55,7 @@
       <article>
         <a href="venue.html">
           <h5>Venue</h5>
+          <img src="images/home/venue.jpg" alt="The Chicago Theatre">
           <h3>The Chicago Theatre</h3>
         </a>
         <p>
